--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,44 @@
+#####
+# OS X temporary files that should never be committed
+
+.DS_Store
+*.swp
+profile
+
+
+
+####
+# Xcode temporary files that should never be committed
+#
+# NB: NIB/XIB files still exist even on Storyboard projects, so we want this...
+
+*~.nib
+
+
+
+#####
+# Xcode private settings (window sizes, bookmarks, breakpoints, custom executables, smart groups)
+#
+# This is complicated:
+#
+# SOMETIMES you need to put this file in version control.
+# Apple designed it poorly - if you use "custom executables", they are
+#  saved in this file.
+# 99% of projects do NOT use those, so they do NOT want to version control this file.
+#  ..but if you're in the 1%, comment out the line "*.pbxuser"
+
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+#    NB: also, whitelist the default ones, some projects need to use these
+!default.pbxuser
+!default.mode1v3
+!default.mode2v3
+!default.perspectivev3
+
+
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
@@ -42,9 +83,10 @@ playground.xcworkspace
 # Package.resolved
 # *.xcodeproj
 #
+
 # Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
 # hence it is not needed unless you have added a package configuration file to your project
-# .swiftpm
+.swiftpm
 
 .build/
 
@@ -54,10 +96,15 @@ playground.xcworkspace
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-# Pods/
+
+Pods/
+
 #
 # Add this line if you want to avoid checking in source code from the Xcode workspace
-# *.xcworkspace
+
+*.xcworkspace
+
+
 
 # Carthage
 #
@@ -88,3 +135,62 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+
+### Xcode Patch ###
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata/
+!*.xcworkspace/contents.xcworkspacedata
+**/xcshareddata/WorkspaceSettings.xcsettings
+
+
+####
+# Xcode 4 - semi-personal settings, often included in workspaces
+#
+# You can safely ignore the xcuserdata files - but do NOT ignore the files next to them
+#
+
+xcuserdata
+
+####
+# XCode 4 workspaces - more detailed
+#
+# Workspaces are important! They are a core feature of Xcode - don't exclude them :)
+#
+# Workspace layout is quite spammy. For reference:
+#
+# (root)/
+#   (project-name).xcodeproj/
+#     project.pbxproj
+#     project.xcworkspace/
+#       contents.xcworkspacedata
+#       xcuserdata/
+#         (your name)/xcuserdatad/
+#     xcuserdata/
+#       (your name)/xcuserdatad/
+#
+#
+#
+# Xcode 4 workspaces - SHARED
+#
+# This is UNDOCUMENTED (google: "developer.apple.com xcshareddata" - 0 results
+# But if you're going to kill personal workspaces, at least keep the shared ones...
+#
+#
+!xcshareddata
+
+####
+# XCode 4 build-schemes
+#
+# PRIVATE ones are stored inside xcuserdata
+!xcschemes
+
+####
+# Xcode 4 - Deprecated classes
+#
+# Allegedly, if you manually "deprecate" your classes, they get moved here.
+#
+# We're using source-control, so this is a "feature" that we do not want!
+
+*.moved-aside
