--- a/Dinter/Supporting Files/Info.plist
+++ b/Dinter/Supporting Files/Info.plist
@@ -56,5 +56,18 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    
+    <key>UIAppFonts</key>
+    <array>
+        <string>GothamRounded-Bold.otf</string>
+        <string>GothamRounded-BoldItalic.otf</string>
+        <string>GothamRounded-Book.otf</string>
+        <string>GothamRounded-BookItalic.otf</string>
+        <string>GothamRounded-Light.otf</string>
+        <string>GothamRounded-LightItalic.otf</string>
+        <string>GothamRounded-Medium.otf</string>
+        <string>GothamRounded-MediumItalic.otf</string>
+    </array>
+    
 </dict>
 </plist>
